--- a/src/app/admin/pedidos/pedidos.component.html
+++ b/src/app/admin/pedidos/pedidos.component.html
@@ -28,8 +28,10 @@
       <table mat-table [dataSource]="dataSource" multiTemplateDataRows matSort>
         <!-- sku Column -->
         <ng-container matColumnDef="id_pedido">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
-          <td mat-cell *matCellDef="let row" style="padding: 20px;">{{ row.id_pedido }}</td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>ID DEL PEDIDO</th>
+          <td mat-cell *matCellDef="let row" style="padding: 20px">
+            {{ row.id_pedido }}
+          </td>
         </ng-container>
 
         <!-- <ng-container matColumnDef="nombre_completo">
@@ -50,12 +52,9 @@
             ESTADO ACTUAL DEL PEDIDO
           </th>
           <td mat-cell *matCellDef="let row">
-            <span
-              style="padding: 11px; border-radius: 30px; font-weight: 500"
-              [style.background-color]="'rgb(' + row.estado_color + ')'"
-              [style.color]="setTextColor(row.estado_color)"
-            >
-              {{ row.pedido_estado | uppercase }}
+            <span fxLayoutAlign="start center" fxLayoutGap="8px">
+              <div style="width: 20px;height: 20px;border-radius: 50%;border: 1px solid rgb(138, 138, 138);" [style.background-color]="'rgb('+row.estado_color+')'"></div>
+              <span>{{row.pedido_estado | uppercase}}</span>
             </span>
           </td>
         </ng-container>
@@ -72,60 +71,89 @@
               [@detailExpand]="
                 element == expandedElement ? 'expanded' : 'collapsed'
               "
-              fxLayout="row wrap"
-              style="background-color: whitesmoke; border-radius: 50px"
             >
-              <!-- <mat-divider fxFlex="100%"></mat-divider> -->
               <div
-                fxFlex="100%"
-                style="margin: 30px"
                 fxLayout="row wrap"
-                fxLayoutAlign="space-around"
-                fxLayoutGap="8px"
+                style="border-radius: 50px;margin: 10px 0px 30px 0px;border: 1px solid rgba(0, 0, 0, 0.12);"
               >
-                <span
-                  >USUARIO:
-                  <b>{{ element.nombre_completo | uppercase }}</b></span
+                <div
+                  fxFlex="100%"
+                  style="margin: 30px 0px"
+                  fxLayout="row wrap"
+                  fxLayoutAlign="space-around"
+                  fxLayoutGap="8px"
                 >
-                <span
-                  >TELÉFONO: <b>{{ element.telefono }}</b></span
+                  <span
+                    >USUARIO:
+                    <b>{{ element.nombre_completo | uppercase }}</b></span
+                  >
+                  <span
+                    >TELÉFONO: <b>{{ element.telefono }}</b></span
+                  >
+                  <span
+                    >CORREO ELECTRÓNICO: <b>{{ element.email }}</b></span
+                  >
+                </div>
+                <div fxFlex="100%">
+                  <app-usuario-pedido-articulos
+                    [idPedido]="element.id_pedido"
+                    [color]="element.estado_color" [textColor]="setTextColor(element.estado_color)"
+                  ></app-usuario-pedido-articulos>
+                </div>
+                <div fxFlex="100%" style="margin-top: 30px">
+                  <p style="text-align: center; margin: 0px; font-weight: 600">
+                    ESTADO ACTUAL DEL PEDIDO
+                  </p>
+                  <p style="text-align: center; margin: 0px" class="mat-small">
+                    Seleccione según corresponda para actualizar estado
+                  </p>
+                </div>
+                <div
+                  fxFlex="100%"
+                  style="margin: 30px"
+                  fxLayoutAlign="space-around end"
+                  fxLayoutGap="16px"
                 >
-                <span
-                  >CORREO ELECTRÓNICO: <b>{{ element.email }}</b></span
-                >
-              </div>
-              <div fxFlex="100%">
-                <app-usuario-pedido-articulos
-                  [idPedido]="element.id_pedido"
-                ></app-usuario-pedido-articulos>
-              </div>
-              <div fxFlex="100%" style="margin-top: 30px;">
-                <p style="text-align: center;margin: 0px;font-weight: 600;">ESTADO ACTUAL DEL PEDIDO</p>
-                <p style="text-align: center;margin: 0px;" class="mat-small">Seleccione según corresponda para actualizar estado</p>
-              </div>
-              <div
-                fxFlex="100%"
-                style="margin: 30px"
-                fxLayoutAlign="space-around end"
-                fxLayoutGap="16px"
-              >
-              <div
-              fxLayout="column"
-              fxLayoutAlign="start center"
-              *ngFor="let estado of estados"
-            >
-              <p class="mat-small" style="text-align: center" [style.font-weight]="setFontWeight(element.id_pedido_estado,estado.id_pedido_estado)">
-                {{ estado.pedido_estado | uppercase }}
-              </p>
-              <div
-                class="circulo"
-                [style.background-color]="
-                  'rgb(' + setBackgroundColor(element.id_pedido_estado,estado.id_pedido_estado, estado.estado_color) + ')'
-                "
-                (click)="updateDataPrueba(dataSource.filteredData.indexOf(element), estado.id_pedido_estado, estado.estado_color, estado.pedido_estado)"
-              ></div>
-            </div>
-
+                  <div
+                    fxLayout="column"
+                    fxLayoutAlign="start center"
+                    *ngFor="let estado of estados"
+                  >
+                    <p
+                      class="mat-small"
+                      style="text-align: center"
+                      [style.font-weight]="
+                        setFontWeight(
+                          element.id_pedido_estado,
+                          estado.id_pedido_estado
+                        )
+                      "
+                    >
+                      {{ estado.pedido_estado | uppercase }}
+                    </p>
+                    <div
+                      class="circulo"
+                      [style.background-color]="
+                        'rgb(' +
+                        setBackgroundColor(
+                          element.id_pedido_estado,
+                          estado.id_pedido_estado,
+                          estado.estado_color
+                        ) +
+                        ')'
+                      "
+                      (click)="
+                        openDialog(
+                          dataSource.filteredData.indexOf(element),
+                          element.id_pedido,
+                          estado.id_pedido_estado,
+                          estado.estado_color,
+                          estado.pedido_estado
+                        )
+                      "
+                    ></div>
+                  </div>
+                </div>
               </div>
             </div>
           </td>
@@ -137,7 +165,7 @@
           *matRowDef="let row; columns: displayedColumns"
           class="example-element-row"
           [class.example-expanded-row]="expandedElement === row"
-          (click)="prueba(row)"
+          (click)="cuandoDeClickEnlaFila(row)"
         ></tr>
         <tr
           mat-row
@@ -153,7 +181,7 @@
       </table>
 
       <mat-paginator
-        [pageSizeOptions]="[5, 10, 20, 30]"
+        [pageSizeOptions]="[5, 10, 20, 30, 40]"
         showFirstLastButtons
         pageSize="20"
       ></mat-paginator>
