--- a/src/app/admin/pedidos/pedidos.component.scss
+++ b/src/app/admin/pedidos/pedidos.component.scss
@@ -65,6 +65,6 @@ mat-icon {
   height: 50px;
   width: 50px;
   border-radius: 50%;
-  border: 2px solid #333;
+  border: 2px solid rgb(138, 138, 138);
   cursor: pointer;
 }
