--- a/src/app/usuario/datos-personales/datos-personales.component.html
+++ b/src/app/usuario/datos-personales/datos-personales.component.html
@@ -1,1 +1,22 @@
-<p>datos-personales works!</p>
+<div
+  style="
+    width: 100%;
+    min-height: calc(
+      100vh - var(--footer-div-height) - var(--toolbar-div-height)
+    );
+  "
+  fxLayoutAlign="center"
+>
+  <div style="margin-top: 20px" fxFlex="1300px">
+    <h1
+      class="mat-display-1"
+      style="font-weight: 600; margin: 0px 0px 20px 0px"
+    >
+      DATOS PERSONALES
+    </h1>
+
+    <div style="margin-top: 9px">
+      <p>hola que hace</p>
+    </div>
+  </div>
+</div>
