--- a/src/app/usuario/pedidos/pedidos.component.html
+++ b/src/app/usuario/pedidos/pedidos.component.html
@@ -1,1 +1,146 @@
-<p>pedidos works!</p>
+<div
+  style="
+    width: 100%;
+    min-height: calc(
+      100vh - var(--footer-div-height) - var(--toolbar-div-height)
+    );
+  "
+  fxLayoutAlign="center"
+>
+  <div style="margin-top: 20px" fxFlex="1300px">
+    <h1
+      class="mat-display-1"
+      style="font-weight: 600; margin: 0px 0px 20px 0px"
+    >
+      MIS PEDIDOS
+    </h1>
+
+    <div style="margin-top: 9px">
+      <table mat-table [dataSource]="dataSource" multiTemplateDataRows matSort>
+        <!-- sku Column -->
+        <ng-container matColumnDef="numero">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header># DE PEDIDO</th>
+          <td mat-cell *matCellDef="let row" >
+            {{ dataSource.filteredData.indexOf(row) + 1 }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="fecha_pedido">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            FECHA Y HORA DEL PEDIDO
+          </th>
+          <td mat-cell *matCellDef="let row">
+            {{ row.fecha_pedido | formatoFecha }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="pedido_estado">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            ESTADO ACTUAL DEL PEDIDO
+          </th>
+          <td mat-cell *matCellDef="let row">
+            <span fxLayoutAlign="start center" fxLayoutGap="8px">
+              <div style="width: 20px;height: 20px;border-radius: 50%;border: 1px solid rgb(138, 138, 138);" [style.background-color]="'rgb('+row.estado_color+')'"></div>
+              <span>{{row.pedido_estado | uppercase}}</span>
+            </span>
+          </td>
+        </ng-container>
+
+        <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+        <ng-container matColumnDef="expandedDetail">
+          <td
+            mat-cell
+            *matCellDef="let element; let i = index"
+            [attr.colspan]="displayedColumns.length"
+          >
+            <div
+              class="example-element-detail"
+              [@detailExpand]="
+                element == expandedElement ? 'expanded' : 'collapsed'
+              "
+            >
+              <div
+                fxLayout="row wrap"
+                style="border-radius: 50px;margin: 10px 0px 30px 0px;border: 1px solid rgba(0, 0, 0, 0.12);"
+              >
+                <div fxFlex="100%" style="margin: 50px 0px">
+                  <app-usuario-pedido-articulos
+                    [idPedido]="element.id_pedido"
+                    [color]="element.estado_color" [textColor]="setTextColor(element.estado_color)"
+                  ></app-usuario-pedido-articulos>
+                </div>
+                <div fxFlex="100%" style="margin-top: 30px">
+                  <p style="text-align: center; margin: 0px; font-weight: 600">
+                    ESTADO ACTUAL DE TU PEDIDO
+                  </p>
+                </div>
+                <div
+                  fxFlex="100%"
+                  style="margin: 30px"
+                  fxLayoutAlign="space-around end"
+                  fxLayoutGap="16px"
+                >
+                  <div
+                    fxLayout="column"
+                    fxLayoutAlign="start center"
+                    *ngFor="let estado of estados"
+                  >
+                    <p
+                      class="mat-small"
+                      style="text-align: center"
+                      [style.font-weight]="
+                        setFontWeight(
+                          element.id_pedido_estado,
+                          estado.id_pedido_estado
+                        )
+                      "
+                    >
+                      {{ estado.pedido_estado | uppercase }}
+                    </p>
+                    <div
+                      class="circulo"
+                      [style.background-color]="
+                        'rgb(' +
+                        setBackgroundColor(
+                          element.id_pedido_estado,
+                          estado.id_pedido_estado,
+                          estado.estado_color
+                        ) +
+                        ')'
+                      "
+                    ></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr
+          mat-row
+          *matRowDef="let row; columns: displayedColumns"
+          class="example-element-row"
+          [class.example-expanded-row]="expandedElement === row"
+          (click)="cuandoDeClickEnlaFila(row)"
+        ></tr>
+        <tr
+          mat-row
+          *matRowDef="let row; columns: ['expandedDetail']"
+          class="example-detail-row"
+        ></tr>
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="3">
+            <p class="mat-body-2" style="text-align: center;font-size: 1.1rem;">Aún no tienes pedidos registrados</p>
+          </td>
+        </tr>
+      </table>
+
+      <mat-paginator
+        [pageSizeOptions]="[5, 10, 20, 30, 40]"
+        showFirstLastButtons
+        pageSize="20"
+      ></mat-paginator>
+    </div>
+  </div>
+</div>
