--- a/src/app/usuario/pedidos/pedidos.component.html
+++ b/src/app/usuario/pedidos/pedidos.component.html
@@ -131,7 +131,7 @@
         <!-- Row shown when there is no matching data. -->
         <tr class="mat-row" *matNoDataRow>
           <td class="mat-cell" colspan="3">
-            <p class="mat-body-2" style="text-align: center;font-size: 1.1rem;">Aún no tienes pedidos registrados</p>
+            <p class="mat-body-2" style="text-align: center;font-size: 1.1rem;">Aún no tiene pedidos registrados</p>
           </td>
         </tr>
       </table>
