--- a/src/app/usuario/datos-personales/datos-personales.component.html
+++ b/src/app/usuario/datos-personales/datos-personales.component.html
@@ -58,9 +58,9 @@
             <mat-form-field appearance="legacy" floatLabel="always" fxFlex="100%" [style.font-size]="'20px'" style="text-align: center;">
               <mat-label>NUEVA CONTRASEÑA</mat-label>
               <input matInput [type]="hide ? 'password' : 'text'" formControlName="new_password">
-              <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide" type="button">
+              <!-- <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide" type="button">
                 <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                </button>
+                </button> -->
             </mat-form-field>
 
 
