--- a/src/app/admin/add-articulo/add-articulo.component.html
+++ b/src/app/admin/add-articulo/add-articulo.component.html
@@ -187,6 +187,7 @@
                   [value]="0"
                   class="mat-body-strong"
                   style="color: #3f51b5"
+                  (click)="openBottomSheet('categoria', categorias)"
                   >Agregar/Editar/Eliminar</mat-option
                 >
               </mat-select>
@@ -205,6 +206,7 @@
                   [value]="0"
                   class="mat-body-strong"
                   style="color: #3f51b5"
+                  (click)="openBottomSheet('subcategoria', subcategorias)"
                   >Agregar/Editar/Eliminar</mat-option
                 >
               </mat-select>
@@ -227,6 +229,7 @@
                   [value]="0"
                   class="mat-body-strong"
                   style="color: #3f51b5"
+                  (click)="openBottomSheet('marca', marcas)"
                   >Agregar/Editar/Eliminar</mat-option
                 >
               </mat-select>
