--- a/src/app/articulo/articulo.component.scss
+++ b/src/app/articulo/articulo.component.scss
@@ -1,8 +1,8 @@
 .imagen {
   width: 100%;
   position: relative;
-  background-image: repeating-linear-gradient(135deg, rgba(189,189,189,0.1) 0px, rgba(189,189,189,0.1) 2px,transparent 2px, transparent 4px),linear-gradient(90deg, rgb(255,255,255),rgb(255,255,255));
-}
+/*   background-image: repeating-linear-gradient(135deg, rgba(189,189,189,0.1) 0px, rgba(189,189,189,0.1) 2px,transparent 2px, transparent 4px),linear-gradient(90deg, rgb(255,255,255),rgb(255,255,255));
+ */}
 .arrow {
   display: none;
   height: 48px;
